--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:mysql://localhost:3306/cotton_usa?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto = update
+spring.security.user.name=yourUsername
+spring.security.user.password=yourPassword
