--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=backend
 spring.datasource.url=jdbc:mysql://localhost:3306/cotton_usa?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 spring.security.user.name=yourUsername
 spring.security.user.password=yourPassword
-logging.level.org.hibernat
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
