--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto = update
 spring.security.user.name=yourUsername
 spring.security.user.password=yourPassword
+spring.jpa.hibernate.show-sql = true
